# art_hug_08

./: .env.example  .gitignore  ENVIRONMENT_STATUS.md  QUICK_START.md  README.md  SETUP_NOTES.md  Taskfile.yml  project.yaml  pyproject.toml  test_demo.py  test_environment.py
docs/: art_08.md  art_08_org.md  art_08i.md
examples/: retail_workflow.py
notebooks/: optimization_benchmarks.ipynb  pipeline_exploration.ipynb  tutorial.ipynb
output/: business_insights.json  review_analysis_results.json
src/: __init__.py  advanced_quantization.py  config.py  custom_pipelines.py  data_workflows.py  diffusion_generation.py  edge_deployment.py  flash_attention.py  main.py  optimization.py  peft_lora.py  production_workflows.py  synthetic_data.py  utils.py
tests/: test_workflows.py
